--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,8 +10,21 @@ const { title } = Astro.props;
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Astro description" />
+    <meta name="description" content="Social media analyzing tool" />
     <meta name="viewport" content="width=device-width" />
+    <meta property="og:title" content="Try IONKOL" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ionkol.com" />
+    <meta
+      property="og:image"
+      content="/favicon.svg"
+    />
+    <meta
+      property="og:description"
+      content="All in on social media analyzing tool. Explore. Analyze. Discover."
+    />
+    <meta property="og:site_name" content="IONKOL" />
+    <meta property="og:locale" content="en_US" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
