--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,9 +30,9 @@ const { title } = Astro.props;
       rel="stylesheet"
     />
     <!-- Favicon -->
-    <link rel="icon" href="/public/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
 
-    <link rel="apple-touch-icon" href="/public/favicon.ico" />
+    <link rel="apple-touch-icon" href="/favicon.ico" />
 
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
