--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,10 +16,9 @@ const { title } = Astro.props;
     <meta property="og:title" content="Try IONKOL" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ionkol.com" />
-    <meta property="og:image" content="/ionkol-logo.jpg" />
     <meta
-      property="og:image:secure_url"
-      content="https://www.ionkol.com/ionkol-logo.jpg"
+      property="og:image"
+      content="https://ogcdn.net/c078a98b-9a33-4eaf-a5cf-e5ebf3ea450c/v1/ionkol.com/Try%20IONKOL/All%20in%20on%20social%20media%20analyzing%20tool.%20Explore.%20Analyze.%20Discover./https%3A%2F%2Fopengraph.b-cdn.net%2Fproduction%2Fimages%2F6ed83272-481d-4995-b153-d67fc4178a79.jpg%3Ftoken%3DtwDZR917y1AXgHHL5lLzjazaRVELUmkHF8Wms9iyIzc%26height%3D1094%26width%3D1200%26expires%3D33263105997/og.png"
     />
     <meta
       property="og:description"
