--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -2,8 +2,8 @@
 import Button from "./ui/Button.astro";
 
 const navItems = ["Features", "Benefits", "About", "Pricing", "Contact"];
-const SIGN_IN_URL = "https://app-dev.ionkol.com//sign-in"
-const SIGN_UP_URL = "https://app-dev.ionkol.com/sign-up"
+const SIGN_IN_URL = "https://app.ionkol.com/sign-in";
+const SIGN_UP_URL = "https://app.ionkol.com/sign-up";
 ---
 
 <header
@@ -46,12 +46,8 @@ const SIGN_UP_URL = "https://app-dev.ionkol.com/sign-up"
 
   <!-- Sign-up and Login buttons -->
   <div class="hidden lg:flex gap-4">
-    <a href={SIGN_UP_URL}>
-      <Button text="Sign-up" type="outline" /></a
-    >
-    <a href={SIGN_IN_URL}>
-      <Button text="Login" /></a
-    >
+    <a href={SIGN_UP_URL}> <Button text="Sign-up" type="outline" /></a>
+    <a href={SIGN_IN_URL}> <Button text="Login" /></a>
   </div>
 </header>
 
@@ -75,8 +71,12 @@ const SIGN_UP_URL = "https://app-dev.ionkol.com/sign-up"
 
   <!-- Sign-up and Login buttons for mobile -->
   <div class="flex flex-col gap-4">
-    <Button text="Sign-up" type="outline" />
-    <Button text="Login" />
+    <a href={SIGN_UP_URL}>
+      <Button text="Sign-up" type="outline" />
+    </a>
+    <a href={SIGN_IN_URL}>
+      <Button text="Login" />
+    </a>
   </div>
 </div>
 
@@ -89,10 +89,10 @@ const SIGN_UP_URL = "https://app-dev.ionkol.com/sign-up"
   document.addEventListener("scroll", () => {
     const navbar = document.getElementById("navbar");
     if (window.scrollY > 0) {
-      navbar.classList.add("bg-[#FFF8F8]", "text-white", 'shadow');
+      navbar.classList.add("bg-[#FFF8F8]", "text-white", "shadow");
       navbar.classList.remove("bg-white", "text-[#0d0c22]");
     } else {
-      navbar.classList.remove("bg-[#FFF8F8]", "text-white", 'shadow');
+      navbar.classList.remove("bg-[#FFF8F8]", "text-white", "shadow");
       navbar.classList.add("bg-white", "text-[#0d0c22]");
     }
   });
